[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/Mobs/meleeRobot.gd" type="Script" id=1]
[ext_resource path="res://Resources/Sprites/characters/meleeRobo.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UI/HealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/Sprites/lights/light.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.12211, 7.9544 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.03252
height = 13.9018

[sub_resource type="CapsuleShape2D" id=3]
radius = 20.8115
height = 4.56767

[sub_resource type="CapsuleShape2D" id=4]
radius = 20.2199
height = 120.0

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arm/Sword/HurtBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Arm/Sword/Light2D:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arm/Sword/HurtBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Arm/Sword/Light2D:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Arm:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 110.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arm/Sword:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -14.0, -14.0, -130.0, -14.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Arm/Sword/HurtBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Arm:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2, 3 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Arm:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3.6, -1.7 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Arm:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Arm/Sword:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 15, 17, 15 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Arm/Sword:offset")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -6, -6 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Arm/Sword:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1.5, 6.2 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Arm/Sword/HurtBox/CollisionShape2D:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -14.8549, -3.12741 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Arm/Sword/HurtBox/CollisionShape2D:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -45.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Arm/Sword/Light2D:color")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 0, 0, 1 ), Color( 0, 0.788235, 1, 1 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Arm/Sword/Light2D:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -8.2563, -8.43628 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Arm/Sword/Light2D:rotation_degrees")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 225.068 ]
}

[sub_resource type="Animation" id=8]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Arm:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -110.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Arm/Sword:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 14.0, 14.0, 130.0, 14.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Arm/Sword/HurtBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Arm:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3.6, -1.7 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Arm:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Arm/Sword:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.5, 6.2 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Arm:offset")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 3 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Arm/Sword:frame")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 14, 16, 14 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Arm/Sword:offset")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, -6 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Arm/Sword/HurtBox/CollisionShape2D:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3.704, -3.7 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Arm/Sword/HurtBox/CollisionShape2D:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 45.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Arm/Sword/Light2D:color")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 0, 0.788235, 1, 1 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Arm/Sword/Light2D:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 9.75269, -9.57863 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Arm/Sword/Light2D:rotation_degrees")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 315.09 ]
}

[sub_resource type="Animation" id=9]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arm:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 3.6, -1.7 ), Vector2( 3.6, -2.7 ), Vector2( 3.6, -1.7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Arm:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Arm:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2, 3 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Arm/Sword:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Arm/Sword:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -14.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Arm/Sword:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1.5, 6.2 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Arm/Sword:offset")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -6, -6 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Arm/Sword/Light2D:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -8.2563, -8.43628 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Arm/Sword/Light2D:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 225.068 ]
}

[sub_resource type="Animation" id=10]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arm:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -3.6, -1.7 ), Vector2( -3.7, -2.7 ), Vector2( -3.6, -1.7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Arm:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Arm:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 3 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Arm/Sword:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, -6 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Arm/Sword:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Arm/Sword:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.5, 6.2 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Arm/Sword:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 14.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Arm/Sword/Light2D:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 9.75269, -9.57863 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Arm/Sword/Light2D:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 315.09 ]
}

[node name="meleeRobot" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 2147483691
script = ExtResource( 1 )
damage = 75
hp = 300
speed = 50
patrolRange = 50
coinsDropped = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
margin_left = -11.7206
margin_top = -10.9182
margin_right = -11.7206
margin_bottom = -10.9182
rect_scale = Vector2( 0.2, 0.1 )

[node name="Body" type="Sprite" parent="."]
z_index = 2
texture = ExtResource( 2 )
hframes = 20
frame = 6

[node name="Arm" type="Sprite" parent="."]
position = Vector2( 3.6, -1.7 )
z_index = 3
texture = ExtResource( 2 )
offset = Vector2( -2, 3 )
hframes = 20
frame = 13

[node name="Sword" type="Sprite" parent="Arm"]
position = Vector2( -1.5, 6.2 )
rotation = -0.244346
z_index = -1
texture = ExtResource( 2 )
offset = Vector2( -6, -6 )
hframes = 20
frame = 15

[node name="Light2D" type="Light2D" parent="Arm/Sword"]
position = Vector2( -8.2563, -8.43628 )
rotation = 3.92817
scale = Vector2( 0.1, 0.05 )
texture = ExtResource( 4 )
color = Color( 0, 0.788235, 1, 1 )
energy = 2.0
shadow_enabled = true
shadow_filter = 1

[node name="HurtBox" type="Area2D" parent="Arm/Sword"]
position = Vector2( 5.9649, -5.89129 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arm/Sword/HurtBox"]
position = Vector2( -14.8549, -3.12741 )
rotation = -0.785398
shape = SubResource( 2 )
disabled = true

[node name="DetectBox" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectBox"]
position = Vector2( 0, -11.763 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="DetectPlayer" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
position = Vector2( -0.458603, -11.7346 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 6.68585, -3.76694 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 34

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RunRight"
anims/DeathLeft = SubResource( 5 )
anims/DeathRight = SubResource( 6 )
anims/HitLeft = SubResource( 7 )
anims/HitRight = SubResource( 8 )
anims/RunLeft = SubResource( 9 )
anims/RunRight = SubResource( 10 )

[node name="Timer" type="Timer" parent="."]

[node name="AnimationDuration" type="Timer" parent="."]

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
process_parent = true
physics_process_parent = true

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="Arm/Sword/HurtBox" to="." method="_on_HurtBox_body_entered"]
[connection signal="body_entered" from="DetectBox" to="." method="_on_DetectBox_body_entered"]
[connection signal="body_entered" from="DetectPlayer" to="." method="_on_DetectPlayer_body_entered"]
[connection signal="body_exited" from="DetectPlayer" to="." method="_on_DetectPlayer_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="AnimationDuration" to="." method="_on_AnimationDuration_timeout"]
